--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-private-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-private-skin.css
@@ -34,13 +34,7 @@ padding-right:30px;
 .af_dialog_main {
 position: relative;
 width: 100%;
-z-index: 2;
-opacity: 1 !important;
 border: 1px solid #f2af00;
-box-shadow: -2px 0px 12px #888888;
--webkit-box-shadow: 0px 0px 16px 0px rgba(50, 50, 51, 0.69);
--moz-box-shadow: 0px 0px 16px 0px rgba(50, 50, 51, 0.69);
-box-shadow: 0px 0px 16px 0px rgba(50, 50, 51, 0.69);
 }
 
 
@@ -809,7 +803,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ed9300', end
 }*/
 
 .outputText, .af_document,.af_panelFormLayout_content-cell{
-padding-top:15px !important;
+/*padding-top:15px !important;*/
 color:#524e4f; 
 font-size:13px;
 font-family : Lucida Sans,Georgia,Serif !important;
@@ -849,16 +843,14 @@ color: #524e4f;
 
 
 .af_panelWindow_title, .af_dialog_title {
-margin-top: 2px;
 cursor: default;
 white-space: nowrap;
 color: #f2ad00;
 font-family: Lucida Sans,Georgia,Serif !important;
 font-size: 16px;
 font-weight: bolder;
-margin-left: 4px;
-margin-top: 10px;
-
+margin-left: 1px;
+margin-top: 5px;
 }
 
 
